<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F8FB"
    android:padding="10dp">


    <Button
        android:id="@+id/logoutB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="9dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="42dp"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="70dp"

        android:layout_marginStart="19dp"
        android:layout_marginTop="178dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="74dp"
        android:text="@string/policija"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="398dp"
        android:text="@string/hitna"
        app:layout_constraintBottom_toTopOf="@+id/logoutB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="70dp"

        android:layout_marginEnd="35dp"
        android:text="@string/vatrogasci"
        app:layout_constraintBaseline_toBaselineOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button" />

    <Button
        android:id="@+id/button8"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="343dp"
        android:text="@string/komunalno_preduze_e"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="312dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="252dp"
        android:text="@string/sos"
        app:layout_constraintBottom_toTopOf="@+id/logoutB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginEnd="50dp"
        android:text="@string/zakoni"
        app:layout_constraintBaseline_toBaselineOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button8" />


</androidx.constraintlayout.widget.ConstraintLayout>
